# dongbei

./: .gitignore  .travis.yml  CHANGES.md  DEVELOPE.md  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: pylint.yml  release.yml
demo/: demo-Fibonacci.dongbei  demo-hello-world.dongbei  demo-todos.dongbei  demo-东百话转北京儿话.dongbei  demo0.dongbei  demo1.dongbei  demo10.dongbei  demo11.dongbei  demo12.dongbei  demo13.dongbei  demo2.dongbei  demo3.dongbei  demo4.dongbei  demo5.dongbei  demo6.dongbei  demo7.dongbei  demo8.dongbei  demo9.dongbei  wordle.dongbei  东百话转北京儿话.dongbei  你好世界.dongbei  出溜.dongbei  吃了没老铁.dongbei  增减数值.dongbei  多变量套路.dongbei  套路.dongbei  套路参数.dongbei  字符串.dongbei  导入python模块.dongbei  快速排序.dongbei  数学作业.dongbei  整点浪漫玩意.dongbei  整除和各种套路.dongbei  文斗.dongbei  斐波那契.dongbei  最高指示.dongbei  比较.dongbei  汉诺塔.dongbei  汉诺塔动唤.dongbei  活着.dongbei  (+8 more)
doc/: cheatsheet.md  dongbei-ref.md  dongbei-style.md
docker/: dockerfile
src/: dongbei.dongbei  dongbei.py
test/: dongbei_test.py  test_all  test_dongbei_add.py
