[metadata]
version = 0.0.16
license_file = LICENSE
name = dongbei-lang
author = Zhanyong Wan and individual contributors
author_email = zhanyong-wan@github.com
description = Programming language based on Dongbei dialect
url = https://github.com/zhanyong-wan/dongbei
project_urls =
    Dongbei source = https://github.com/zhanyong-wan/dongbei
classifiers =
	Intended Audience :: Developers
    License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: MacOS :: MacOS X
	Operating System :: POSIX
	Operating System :: POSIX :: BSD
	Operating System :: POSIX :: Linux
	Operating System :: Microsoft :: Windows
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8

[options]
packages =
	src
	demo
python_requires = >=3.6
install_requires=
	setuptools >= 0.7.0
	absl-py >= 1.0.0
setup_requires =
    setuptools_scm >= 1.15
include_package_data = True

[options.package_data]
demo=demo/*.dongbei

[options.entry_points]
console_scripts =
	dongbei = src.dongbei:main
